...
        if self.isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            
            let text = makeResultsMessage()
            
            let viewModel = QuizResultViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть еще раз")
            viewController?.show(quiz: viewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
